# multidoc-rag-chat

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirement.txt
multi_doc_chat/config/: config.yml
multi_doc_chat/logger/: __init__.py  custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: RAG.ipynb  evaluation.ipynb
static/: styles.css
test/: conftest.py
test/integration/: test_chat_route.py  test_upload_route.py
test/unit/: test_data_ingestion.py  test_retrieval.py
